--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+<!--    <style name="Theme.Ruterito" parent="Theme.MaterialComponents.DayNight.NoActionBar">-->
+<!--        <item name="windowActionBar">false</item>-->
+<!--    </style>-->
+<!--    <style name="Theme.Ruterito" parent="android:Theme.Material.Light.NoActionBar">-->
+<!--        <item name="android:statusBarColor">#EC0707</item>-->
+<!--    </style>-->
+<!--    <style name="Theme.Splash.Custom" parent="Theme.Ruterito">-->
+<!--        <item name="android:windowBackground">@drawable/bg_splash</item>-->
+<!--    </style>-->
+<!--    <style name="Theme.Material.DayNight.NoActionBar" parent="@android:style/Theme.Material.Light.NoActionBar" />-->
+
     <style name="Theme.Ruterito" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
+        <item name="android:statusBarColor">#EC0707</item>
     </style>
 
-    <style name="Theme.App.Ruterito.SlashScreen" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">#EC0707</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/bg_main_red</item>
-        <item name="postSplashScreenTheme">@style/Theme.Ruterito</item>
+    <style name="SplashScreenTheme" parent="Theme.Ruterito">
+        <item name="android:windowBackground">@drawable/bg_splash</item>
     </style>
+
+
+<!--    <style name="Theme.App.Ruterito.SlashScreen" parent="Theme.SplashScreen">-->
+<!--        <item name="windowSplashScreenBackground">#EC0707</item>-->
+<!--        <item name="windowSplashScreenAnimatedIcon">@drawable/bg_main_red</item>-->
+<!--        <item name="postSplashScreenTheme">@style/Theme.Ruterito</item>-->
+<!--    </style>-->
 </resources>
